Fix SplatNet gear cash icon alignment on OS X and in Twitter screenshots

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -452,7 +452,7 @@ body.has-modal #main {
     .cash {
         width: 24px;
         height: 24px;
-        vertical-align: text-bottom;
+        vertical-align: bottom;
     }
 
     &.shoes .bottom-bar {
